--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
 <h1> Esta es mi primera página con GitHub Pages </h1>
+<a href="http://www.mit.edu/">Visita MIT</a>
 <p>¡Gracias GitHub!</p>
 </html>
